fix on image distortion, include cross-fade on background image, +other minor adjustments on main.css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,7 +172,7 @@ body {
         }
         figure {
           text-align: center;
-          width: 100%;
+          /* width: 100%; */
           img {
             max-height: calc(100vh - 2rem);
             max-width: 100%;
@@ -183,6 +183,37 @@ body {
             text-align: center;
             font-weight: 500;
             font-size: 1.6rem;
+          }
+          * {
+            padding: 0;
+            margin: 0 !important;
+            box-sizing: border-box;
+          }
+          .frame-outerBevel {
+            box-shadow: 4px 6px 12px 0 black;
+            border-width: 5px;
+            border-style: solid;
+            border-color: rgb(109, 84, 58) rgb(24, 19, 13) rgb(24, 19, 13)
+              rgb(109, 84, 58);
+          }
+
+          .frame-flatSurface {
+            border: 12px solid rgb(65, 40, 16);
+          }
+
+          .frame-innerBevel {
+            border-width: 5px;
+            border-style: solid;
+            border-color: rgb(24, 19, 13) rgb(109, 84, 58) rgb(109, 84, 58)
+              rgb(24, 19, 13);
+            img {
+              padding: 7.5% 7.5% 10% 7.5%; /* Mat width */
+              background-color: beige; /* Mat color */
+              border-width: 3px; /* Gold edge of mat */
+              border-style: solid;
+              border-color: rgb(207, 166, 0) rgb(207, 166, 0) rgb(145, 110, 0)
+                rgb(145, 110, 0);
+            }
           }
         }
         .technique {
@@ -197,6 +228,28 @@ body {
         &:last-child {
           margin-bottom: 3rem;
         }
+      }
+    }
+    #background-image-container {
+      position: fixed;
+      z-index: -1;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      opacity: 0.15;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      &.visible {
+        /* visibility: visible; */
+        opacity: 0.15;
+        transition: all 0.25s ease-in-out;
+      }
+      &.hidden {
+        /* visibility: hidden; */
+        opacity: 0;
+        transition: all 0.25s ease-in-out;
       }
     }
   }
@@ -219,55 +272,5 @@ body {
     & figcaption {
       display: block !important;
     }
-  }
-}
-
-#background-image-container {
-  position: fixed;
-  z-index: -1;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  opacity: 0.15;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#arts article figure {
-  * {
-    padding: 0;
-    margin: 0 !important;
-    box-sizing: border-box;  
-  }
-  .frame-outerBevel {
-    box-shadow: 4px 6px 12px 0 black;
-    border-width: 5px;
-    border-style: solid;
-    border-color: rgb(109, 84, 58) rgb(24, 19, 13) rgb(24, 19, 13)
-      rgb(109, 84, 58);
-  }
-  
-  .frame-flatSurface {
-    border: 12px solid rgb(65, 40, 16);
-  }
-  
-  .frame-innerBevel {
-    border-width: 5px;
-    border-style: solid;
-    border-color: rgb(24, 19, 13) rgb(109, 84, 58) rgb(109, 84, 58)
-      rgb(24, 19, 13);
-      img { /* including mat and gold beveled edge of mat */
-        display: block;
-        clear: both;
-        height: 100%;
-        width: 100%;
-        padding: 7.5% 7.5% 10% 7.5%; /* Mat width */
-        background-color: beige !important; 	/* Mat color */
-        border-width: 3px;	/* Gold edge of mat */
-        border-style: solid;
-        border-color: rgb(207, 166, 0) rgb(207, 166, 0) rgb(145, 110, 0) rgb(145, 110, 0);
-        }
   }
 }
